<resources>
    <string name="app_name" translatable="false">Coinz</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoiam1haW8iLCJhIjoiY2ptZmE3ZTFtNjk0cDNrcXZzYjI3ZjNyNiJ9.JczgAMs4tnWXbW8cbVKpaA</string>
    <string name="mapbox_style_coinz" translatable="false">mapbox://styles/jmaio/cjmi1329anoq22sqt6z3fkw2m</string>
    <string name="preferences_file" translatable="false">coinz_prefs</string>
    <string name="curr_shil">SHIL</string>
    <string name="curr_dolr">DOLR</string>
    <string name="curr_quid">QUID</string>
    <string name="curr_peny">PENY</string>
    <string name="curr_gold">Gold</string>
    <string name="location_explanation">Location permissions are necessary to play Coinz. Please press \"OK\" to enable location access.</string>
    <string name="map_repo">http://homepages.inf.ed.ac.uk/stg/coinz</string>
    <string name="coinmap_filename">coinzmap.geojson</string>
    <string name="title_activity_login">Log in</string>
    <!-- Strings related to login -->
    <string name="start_welcome">Welcome to Coinz!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="start_login">Please register an account below (or sign in if you already have one)</string>
    <string name="action_register">Register</string>
    <string name="title_activity_wallet">Coinz Wallet</string>
    <string name="value_display"><big>%1$s</big>.<small>%2$s</small></string>
    <string name="coins_collected">Coins collected</string>
    <string name="coins_collected_progress">%1$d / 50</string>
    <string name="coins_banked">Coins banked</string>
    <string name="coins_banked_progress">%1$d / 25</string>
    <string name="title_activity_bank">Coinz Bank</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
</resources>
