<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_styleUrl="mapbox://styles/jmaio/cjmi1329anoq22sqt6z3fkw2m">

    </com.mapbox.mapboxsdk.maps.MapView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/button_shil"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipBackgroundColor="@color/shil_button"
                android:textColor="@color/textLight"
                android:text="@string/curr_shil" />

            <com.google.android.material.chip.Chip
                android:id="@+id/button_dolr"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipBackgroundColor="@color/dolr_button"
                android:textColor="@color/textLight"
                android:text="@string/curr_dolr" />

            <com.google.android.material.chip.Chip
                android:id="@+id/button_quid"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipBackgroundColor="@color/quid_button"
                android:textColor="@color/textLight"
                android:text="@string/curr_quid" />

            <com.google.android.material.chip.Chip
                android:id="@+id/button_peny"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipBackgroundColor="@color/peny_button"
                android:textColor="@color/textLight"
                android:text="@string/curr_peny" />

        </com.google.android.material.chip.ChipGroup>

    </RelativeLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_account_balance_wallet_white_24dp"
            mapbox:layout_anchor="@id/bottom_app_bar" />

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            mapbox:backgroundTint="@color/colorPrimary"
            mapbox:fabAlignmentMode="center"
            mapbox:menu="@menu/bottomappbar_menu"
            mapbox:navigationIcon="@drawable/ic_account_balance_white_24dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>