<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_currency_cards"
        tools:listitem="@android:layout/activity_list_item">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/bank_currency_cards"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:elevation="1dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingVertical="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/shil_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="0"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:theme="@style/Base.Theme.MaterialComponents.Light"
            app:cardCornerRadius="24dp"
            app:cardElevation="1dp"
            app:contentPadding="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/curr_shil"
                    android:textAlignment="center"
                    android:textColor="@color/textLight"
                    android:textIsSelectable="false"
                    app:chipBackgroundColor="@color/shil_button" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/shil_curr_value_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="23"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="." />

                    <TextView
                        android:id="@+id/shil_curr_value_decimals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="45" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dolr_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="0"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:theme="@style/Base.Theme.MaterialComponents.Light"
            app:cardCornerRadius="24dp"
            app:cardElevation="1dp"
            app:contentPadding="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/curr_dolr"
                    android:textAlignment="center"
                    android:textColor="@color/textLight"
                    android:textIsSelectable="false"
                    app:chipBackgroundColor="@color/dolr_button" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dolr_curr_value_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="23"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="." />

                    <TextView
                        android:id="@+id/dolr_curr_value_decimals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="45" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/quid_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="0"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:theme="@style/Base.Theme.MaterialComponents.Light"
            app:cardCornerRadius="24dp"
            app:cardElevation="1dp"
            app:contentPadding="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/curr_quid"
                    android:textAlignment="center"
                    android:textColor="@color/textLight"
                    android:textIsSelectable="false"
                    app:chipBackgroundColor="@color/quid_button" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/quid_curr_value_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="23"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="." />

                    <TextView
                        android:id="@+id/quid_curr_value_decimals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="45" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/peny_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="0"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:theme="@style/Base.Theme.MaterialComponents.Light"
            app:cardCornerRadius="24dp"
            app:cardElevation="1dp"
            app:contentPadding="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/curr_peny"
                    android:textAlignment="center"
                    android:textColor="@color/textLight"
                    android:textIsSelectable="false"
                    app:chipBackgroundColor="@color/peny_button" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/peny_curr_value_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="23"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="." />

                    <TextView
                        android:id="@+id/peny_curr_value_decimals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="45" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>